# whisperX

./: pyproject.toml  sitecustomize.py
DiariZen/: LICENSE  README.md  pyproject.toml  requirements.txt
DiariZen/diarizen/: ckpt_utils.py  logger.py  noam_updater.py  optimization.py  trainer_distill_prune.py  trainer_dual_opt.py  trainer_single_opt.py  trainer_utils.py  utils.py
DiariZen/diarizen/clustering/: VBx.py
DiariZen/diarizen/pipelines/: inference.py  utils.py
DiariZen/dscore/: requirements.txt  score.py
DiariZen/dscore/scorelib/: score.py
DiariZen/pyannote-audio/: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  FAQ.md  LICENSE  MANIFEST.in  README.md  codecov.yml  environment.yaml  faq.yml  requirements.txt  setup.cfg  setup.py
DiariZen/pyannote-audio/.faq/: FAQ.md  suggest.md
DiariZen/pyannote-audio/doc/: gen_docs.py  requirements.txt
DiariZen/pyannote-audio/notebook/: augmentation.ipynb  example.ipynb  freeze.ipynb  inference.ipynb  sharing.ipynb
DiariZen/pyannote-audio/pyannote/: __init__.py
DiariZen/pyannote-audio/questions/: README.md  bad_performance.question.md  from_memory.question.md  offline.question.md  pyannote.question.md  streaming.question.md
DiariZen/pyannote-audio/tests/: conftest.py  inference_test.py  io_test.py  test_cli.py  test_clustering.py  test_import_lib.py  test_metrics.py  test_run_notebooks.py  test_sample.py  test_stats_pool.py  test_train.py
DiariZen/pyannote-audio/tutorials/: MRE_template.ipynb  adapting_pretrained_pipeline.ipynb  add_your_own_model.ipynb  add_your_own_task.ipynb  applying_a_model.ipynb  applying_a_pipeline.ipynb  intro.ipynb  overlapped_speech_detection.ipynb  speaker_verification.ipynb  training_a_model.ipynb  training_with_cli.md  voice_activity_detection.ipynb
DiariZen/recipes/diar_ssl/: README.md  dataset.py  infer_avg.py  run_dual_opt.py  run_single_opt.py  run_stage.sh  trainer_dual_opt.py  trainer_single_opt.py
DiariZen/recipes/diar_ssl_pruning/: README.md  apply_pruning.py  convert_wavlm_from_hf.py  dataset.py  infer_avg.py  run_distill_prune.py  run_dual_opt_continued_training.py  (+2 more)
pyannote/pyannote/: __init__.py
whisperx/: __main__.py  diarize.py  diarizen_pipeline.py  transcribe.py
(+151 files in other folders)
