[project]
urls = { repository = "https://github.com/m-bain/whisperx" }
authors = [{ name = "Max Bain" }]
name = "whisperx"
version = "3.4.2"
description = "Time-Accurate Automatic Speech Recognition using Whisper."
readme = "README.md"
requires-python = ">=3.9, <3.13"
license = { text = "BSD-2-Clause" }

dependencies = [
    "ctranslate2>=4.5.0",
    "faster-whisper=1.2.0",
    "nltk>=3.9.1",
    # Restrict numpy, onnxruntime, pandas to be compatible with Python 3.9
    "numpy>=2.0.2,<2.1.0",
    "onnxruntime>=1.19,<1.20.0",
    "pandas>=2.2.3,<2.3.0",
    "torch>=2.7.1",
    "torchaudio>=2.1.1",
    # pyannote-audio dependencies
    "asteroid-filterbanks >=0.4",
    "einops >=0.6.0",
    "huggingface_hub >= 0.13.0",
    "lightning >= 2.0.1",
    "omegaconf >=2.1,<3.0",
    "pyannote.core >= 5.0.0",
    "pyannote.database >= 5.0.1",
    "pyannote.metrics >= 3.2",
    "pyannote.pipeline >= 3.0.1",
    "pytorch_metric_learning >= 2.1.0",
    "rich >= 12.0.0",
    "semver >= 3.0.0",
    "soundfile >= 0.12.1",
    "speechbrain >= 0.5.14",
    "tensorboardX >= 2.6",
    "torch_audiomentations >= 0.11.0",
    "torchmetrics >= 0.11.0",
    "transformers>=4.48.0",
    "triton>=3.3.0; sys_platform == 'linux'" # only install triton on Linux
]


[project.scripts]
whisperx = "whisperx.__main__:cli"

[build-system]
requires = ["setuptools"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [".", "DiariZen", "DiariZen/pyannote-audio"]
include = ["whisperx*", "diarizen*", "pyannote*"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch", marker = "sys_platform != 'darwin'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch", marker = "sys_platform != 'darwin'" },
]
triton = [
  { index = "pytorch", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
